# onceuponai

./: .gitignore  Cargo.toml  Makefile  README.md  jupyter.sh  serve_recipes.py
.github/workflows/: rust.yml
adventures/: Cargo.toml  embedders.http
adventures-py/: Cargo.toml  pyproject.toml
adventures-py/src/: lib.rs
adventures/public/: index.html
adventures/src/: bot.rs  cli.rs  common.rs  lib.rs  main.rs  models.rs  serve.rs
adventures/src/llm/: e5.rs  gemma.rs  mod.rs  quantized.rs  rag.rs
caddy/: Caddyfile  caddy.sh
crates/onceuponai/: Cargo.toml  README.md  copy_sidecars.sh  onceuponai.http  package-lock.json  package.json  run.sh
crates/onceuponai-abstractions/: Cargo.toml
crates/onceuponai-abstractions/src/: actors.rs  lib.rs
crates/onceuponai-actors/: Cargo.toml
crates/onceuponai-actors-abstractions/: Cargo.toml
crates/onceuponai-actors-abstractions/src/: lib.rs
crates/onceuponai-actors-candle/: Cargo.toml
crates/onceuponai-actors-candle/src/: main.rs
crates/onceuponai-actors-candle/src/chat/: gemma.rs  mistral.rs  mod.rs  openai_chat.rs  quantized.rs
crates/onceuponai-actors-candle/src/embeddings/: e5.rs  mod.rs
crates/onceuponai-actors-candle/src/llm/: e5.rs  gemma.rs  mistral.rs  mod.rs  quantized.rs
crates/onceuponai-actors-mistralrs/: Cargo.toml
crates/onceuponai-actors-mistralrs/src/: main.rs
crates/onceuponai-actors-mistralrs/src/chat/: engine.rs  gguf.rs  mod.rs  openai.rs  parser.rs  util.rs
crates/onceuponai-actors/src/: abstractions.rs  initialize.rs  lib.rs
crates/onceuponai-actors/src/abstractions/: mod.rs  openai.rs
crates/onceuponai-actors/src/actors/: custom_actor.rs  main_actor.rs  mod.rs
crates/onceuponai-actors/src/cluster/: mod.rs
crates/onceuponai-actors/src/llm/: e5.rs  gemma.rs  quantized.rs
crates/onceuponai-app/: index.html  package-lock.json  package.json  run.sh
crates/onceuponai-app-beta/: index.html  package-lock.json  package.json  run.sh
crates/onceuponai-app-beta/src/: App.vue  common.ts  router.ts
crates/onceuponai-app-beta/src-tauri/: Cargo.toml  tauri.conf.json
crates/onceuponai-app-beta/src-tauri/src/: main.rs
crates/onceuponai-app-beta/src-tauri/src/server/: mod.rs
crates/onceuponai-app-beta/src-tauri/src/server/handlers/: actors.rs  mod.rs
crates/onceuponai-app/src/: App.vue  common.ts  main.ts
crates/onceuponai-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/onceuponai-app/src-tauri/capabilities/: default.json
crates/onceuponai-app/src-tauri/src/: main.rs
crates/onceuponai-app/src-tauri/src/server/: mod.rs
crates/onceuponai-app/src-tauri/src/server/handlers/: actors.rs  auth.rs  oai.rs  users.rs
crates/onceuponai-candle/: Cargo.toml
crates/onceuponai-candle/src/llm/: e5.rs  gemma.rs  mistral.rs  mod.rs  quantized.rs  rag.rs
crates/onceuponai-core/: Cargo.toml
crates/onceuponai-core/src/: common.rs  config.rs  lib.rs  notifications.rs
crates/onceuponai-core/src/llm/: e5.rs  mod.rs  quantized.rs
crates/onceuponai-operator/src/: main.rs  spec.rs
crates/onceuponai-py/: Cargo.toml  pyproject.toml
crates/onceuponai-py/src/: lib.rs
crates/onceuponai-py/src/llm/: mod.rs
crates/onceuponai-server/: Cargo.toml  actors_gallery.yaml  onceuponai.http
crates/onceuponai-server/src/: bot.rs  cli.rs  lib.rs  main.rs  serve.rs  session.rs
crates/onceuponai-server/src/handlers/: actors.rs  auth.rs  chat.rs  mod.rs  oai.rs
crates/onceuponai-server/src/models/: mod.rs
crates/onceuponai-server/ui/: index.css  index.html  index.js
crates/onceuponai-server/ui/assets/: index-1e95b263.css  index-2731bee8.js  index-276ce178.css  index-4037f5d6.js  index-4599dad9.js  index-4a47f803.css  index-5956cac1.css  index-7663bc6a.js  index-8a6604ca.css  index-e1b29641.js
crates/onceuponai/src/: App.vue  cli.rs  config.rs  main.rs  main.ts  mdcommon.ts  pycommon.ts  pyworker.js  pyworker.ts  router.ts  serve.rs
crates/onceuponai/src-tauri/: Cargo.toml  tauri.conf.json
crates/onceuponai/src-tauri/capabilities/: default.json
crates/onceuponai/src-tauri/resources/: actors_gallery.json  actors_gallery.yaml
crates/onceuponai/src-tauri/src/: commands.rs  main.rs
crates/onceuponai/src-tauri/src/server/: mod.rs
crates/onceuponai/src/assets/: global.css
crates/onceuponai/src/components/: Actors.vue  Chat.vue  Code.vue  Editor.vue  Embeddings.vue  Home.vue  Navigation.vue  PersonalTokens.vue
crates/onceuponai/src/handlers/: actors.rs  auth.rs  mod.rs
crates/onceuponai/src/models/: mod.rs
docker/: Dockerfile  Dockerfile.cuda  build.cuda.sh  build.sh
docker/old/: Dockerfile  build.sh  requirements.txt  run.sh
examples/: bielik.yaml  e5.yaml  main.yaml
notebooks/: FantasyAssistantPrep.ipynb  Recipes.ipynb  data.yaml  recipes.yaml
onceuponai/: Cargo.toml  embedders.http  onceuponai.http
onceuponai-core/: Cargo.toml
onceuponai-core/src/: bot.rs  common.rs  common_models.rs  models.rs
onceuponai-core/src/llm/: e5.rs  gemma.rs  mod.rs  quantized.rs  rag.rs
onceuponai-operator/: Cargo.toml
onceuponai-py/: Cargo.toml  README.md  pyproject.toml
onceuponai-py/src/: lib.rs
onceuponai-py/src/agents/: mod.rs
onceuponai-py/src/llm/: mod.rs
onceuponai-ui/: .gitignore  build.sh  index.html  package-lock.json  package.json  run.sh  tsconfig.app.json  vite.config.ts
onceuponai-ui/src/: App.vue  editor.ts  main.ts  mdcommon.ts  router.ts
onceuponai-ui/src/assets/: main.css
onceuponai-ui/src/components/: Actors.vue  Chat.vue  Dashboard.vue  Footer.vue  Home.vue  Models.vue  PersonalTokens.vue  Profile.vue  Prompts.vue  (+2 more)
onceuponai/public/: index.html
onceuponai/src/: auth.rs  bot.rs  cli.rs  config.rs  guards.rs  lib.rs  main.rs  models.rs  serve.rs  session.rs
onceuponai/src/actors/: main_actor.rs  mod.rs  model_actor.rs
onceuponai/src/cluster/: mod.rs
onceuponai/src/handlers/: actors.rs  auth.rs  chat.rs  embeddings.rs  mod.rs  oai.rs  users.rs
onceuponai/src/llm/: e5.rs  gemma.rs  mod.rs  quantized.rs
onceuponai/src/models/: mod.rs
scripts/: install.sh  install_deb.sh  postinstall.sh
terraform/: main.tf  variables.tf
(+8 files in other folders)
