[workspace]
members = [
    "onceuponai",
    "onceuponai-core",
    "onceuponai-py",
    ]

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "onceuponai"
repository = "https://github.com/onceuponai-dev/onceuponai"
keywords = ["llm", "ai", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num-traits = "0.2.15"
rand = "0.8.5"
safetensors = "0.4.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.19.1", features = [
    "unstable_wasm",
], default-features = false }
futures = "0.3.25"
candle-core = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d" }
candle-nn = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d"  }
candle-transformers = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d" }
hf-hub = { git = "https://github.com/qooba/hf-hub.git", branch = "remove-native-tls", version = "0.3.0", features = ["tokio"] }
clap = { version = "4.2.1"}
serde_yaml = "0.9"
tokio = { version = "1.20.0", features = ["full"]}
chrono = "0.4.22"
derive_more = "0.99.17"
csv = { version = "1.3.0" }
async-stream = "0.3.3"
once_cell = "1.17.1"
bytes = "1.3.0"
env_logger = { version = "0.11.2" }
#accelerate-src = { version = "0.3.2", optional = true }
#intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
#metal = { version = "0.27.0", features = ["mps"], optional = true }
arrow-array = "51.0"
lancedb = { version = "0.5.2", default-features = false }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false}
jsonwebtoken = "9.3.0"
byteorder = "1.4.3"
log = "0.4"
actix-web = { version = "4", features = ["rustls"]  }
actix-files = "0.6.2"
actix-rt = "2.8.0"

[profile.release-with-debug]
inherits = "release"
debug = true