[workspace]
members = [
    "crates/onceuponai-server", 
    "crates/onceuponai-abstractions", 
    "crates/onceuponai-actors", 
    "crates/onceuponai-actors-candle", 
    "crates/onceuponai-candle",
    "crates/onceuponai-core", 
    #"crates/onceuponai-operator",
    #"crates/onceuponai-py",
    "crates/onceuponai/src-tauri"
    ]

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "onceuponai"
repository = "https://github.com/onceuponai-dev/onceuponai"
keywords = ["llm", "ai", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
actix = "0.13.1"
actix-broker = "0.4.3"
actix-files = "0.6.2"
actix-rt = "2.9"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-telepathy = "0.6.0"
actix-web = { version = "4", features = ["rustls"]  }
anyhow = { version = "1", features = ["backtrace"] }
arrow-array = "51.0"
async-stream = "0.3.3"
base64 = "0.22.1"
byteorder = "1.4.3"
bytes = "1.3.0"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
#candle-core = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d" }
#candle-nn = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d"  }
#candle-transformers = { git = "https://github.com/qooba/candle.git", rev="9a9bc6d" }
clap = { version = "4.2.1", features = ["derive"]}
chrono = {version="0.4.22", features=["serde"]}
cookie = "0.18"
csv = { version = "1.3.0" }
derive_more = "0.99.17"
dotenv = "0.15.0"
envy = "0.4"
env_logger = { version = "0.11.2" }
futures = "0.3.25"
hf-hub = "0.3.2"
#hf-hub = { git = "https://github.com/qooba/hf-hub.git", branch = "remove-native-tls-ok", version = "0.3.2", features = ["tokio"] }
jsonwebtoken = "9.3.0"
kube = { version = "0.92.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
#lancedb = { version = "0.5.2", default-features = false, features=["polars"] }
lancedb = { version = "0.5.2", default-features = false }
log = "0.4.14"
num-traits = "0.2.15"
once_cell = "1.17.1"
#opendal = { version="0.47", features=["services-azblob"] }
openidconnect = { version="3.5", features=["reqwest"] }
#polars = "0.39.2"
#polars-arrow = "0.39.2"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false}
rustls = { version = "0.23.5" }
safetensors = "0.4.2"
schemars = "0.8.21"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9"
# tauri = { version = "1", features = ["shell-open", "http-all"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-build = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
thiserror = "1"
tokenizers = { version = "0.19.1", features = [
    "unstable_wasm",
], default-features = false }
tokio = { version = "1.20.0", features = ["full"]}
url = "2.3"
uuid = "1.6.1"
#accelerate-src = { version = "0.3.2", optional = true }
#intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
#metal = { version = "0.27.0", features = ["mps"], optional = true }


[profile.release-with-debug]
inherits = "release"
debug = true
