[package]
name = "adventures-py"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/qooba/anonymize-rs"
description = "Data anonymization library"
license = "Apache-2.0"

[lib]
name = "adventures"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
adventures = { path = "../adventures", features = ["musl"] }
pyo3 = { version = "0.20.2", features = ["extension-module"] }
tokio = { version = "1.20.0", features = ["full"] }