[package]
name = "adventures-py"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/qooba/anonymize-rs"
description = "Data anonymization library"
license = "Apache-2.0"

[lib]
name = "onceuponai"
crate-type = ["cdylib"]

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
adventures = { path = "../adventures", features = ["musl","cuda"] }
pyo3 = { version = "0.21.2", features = ["extension-module"] }
tokio = { version = "1.20.0", features = ["full"] }