[package]
name = "adventures"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
byteorder = "1.4.3"
log = "0.4"
num-traits = "0.2.15"
rand = "0.8.5"
safetensors = "0.4.2"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1"
tokenizers = { version = "0.19.1", features = [
    "unstable_wasm",
], default-features = false }
futures = "0.3.25"
candle-core = "0.5.0"
candle-nn = "0.5.0"
candle-transformers = "0.5.0"
# candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main", version = "0.4.0", package = "candle-core" }
# candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main", version = "0.4.0" }
# candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main", version = "0.4.0" }

#candle-onnx = "0.3.3"
hf-hub = { git = "https://github.com/qooba/hf-hub.git", branch = "remove-native-tls", version = "0.3.0", features = [
    "tokio",
], optional = true }

clap = { version = "4.2.1", optional = true }
serde_yaml = "0.9"
tokio = { version = "1.20.0", optional = true }
chrono = "0.4.22"
derive_more = "0.99.17"
csv = { version = "1.3.0", optional = true }
actix-web = { version = "4", features = ["rustls"], optional = true }
actix-files = "0.6.2"
actix-rt = "2.8.0"
async-stream = "0.3.3"
once_cell = "1.17.1"
bytes = "1.3.0"
env_logger = { version = "0.11.2", optional = true }
#accelerate-src = { version = "0.3.2", optional = true }
#intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
#metal = { version = "0.27.0", features = ["mps"], optional = true }

# LANCE
arrow-array = "51.0"
lancedb = { version = "0.4.18", default-features = false }

[dev-dependencies]
tempfile = "3"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[features]
default = ["musl"]
musl = ["tokio/full", "clap", "hf-hub", "csv", "actix-web", "env_logger"]
#accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
#mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
#metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "dep:metal"]
