[package]
name = "onceuponai-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokenizers = { workspace = true } 
futures = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
csv = { workspace = true }
async-stream = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
arrow-array = { workspace = true }
lancedb = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
#accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
#mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
#metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "dep:metal"]
