[package]
name = "onceuponai-py"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/onceuponai-dev/onceuponai"
description = "Onceupon AI library"
license = "Apache-2.0"

[lib]
name = "onceuponai"
crate-type = ["cdylib"]

#[build]
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
onceuponai-core= { path = "../onceuponai-core", features = ["musl","cuda"] }
pyo3 = { version = "0.21.2", features = ["extension-module", "experimental-async", "abi3", "abi3-py38", "anyhow"] }
tokio = { version = "1.20.0", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }