[package]
name = "onceuponai-py"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "onceuponai"
crate-type = ["cdylib"]

#[build]
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
anyhow = { workspace = true }
onceuponai-core= { path = "../onceuponai-core", features = ["cuda"] }
pyo3 = { version = "0.21.2", features = ["extension-module", "experimental-async", "abi3", "abi3-py38", "anyhow"] }
tokio = { workspace = true }