[package]
name = "onceuponai-actors-abstractions"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
actix-telepathy = { workspace = true }
anyhow = { workspace = true }
onceuponai-abstractions= { path = "../onceuponai-abstractions" }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
