[package]
name = "onceuponai-actors-mistralrs"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
actix-telepathy = { workspace = true }
actix-broker = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
candle-core = { workspace = true }
clap = { workspace = true }
data-url = { workspace = true }
either = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
mistralrs = { workspace = true }
once_cell = { workspace = true }
onceuponai-abstractions= { path = "../onceuponai-abstractions" }
onceuponai-actors= { path = "../onceuponai-actors" }
#onceuponai-candle= { path = "../onceuponai-candle" }
onceuponai-core= { path = "../onceuponai-core" }
reqwest = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[features]
default = []
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]

