[package]
name = "onceuponai-actors"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
actix = { workspace = true }
actix-broker = { workspace = true }
actix-telepathy = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
onceuponai-actors-abstractions= { path = "../onceuponai-actors-abstractions" }
onceuponai-abstractions= { path = "../onceuponai-abstractions" }
onceuponai-candle= { path = "../onceuponai-candle" }
onceuponai-core= { path = "../onceuponai-core" }
rand = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }