[package]
name = "onceuponai-candle"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
once_cell = { workspace = true }
onceuponai-core= { path = "../onceuponai-core" }
serde_json = { workspace = true }
tokenizers = { workspace = true } 
tokio = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
#accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
#mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
#metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal", "dep:metal"]
