[package]
name = "onceuponai-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
arrow-array = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
jsonwebtoken = { workspace = true }
lancedb = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
onceuponai-abstractions= { path = "../onceuponai-abstractions" }
#opendal = { workspace = true }
#polars = { workspace = true }
#polars-arrow = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

