[package]
name = "onceuponai-server"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
actix = { workspace = true }
actix-files = { workspace = true }
actix-rt = { workspace = true }
actix-session = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
onceuponai-abstractions= { path = "../onceuponai-abstractions" }
onceuponai-actors= { path = "../onceuponai-actors" }
onceuponai-core= { path = "../onceuponai-core" }
openidconnect = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
