[package]
name = "onceuponai"
version = "0.1.0"
edition = "2021"


[dependencies]
actix = { workspace = true }
actix-broker = { workspace = true }
actix-files = { workspace = true }
actix-rt = { workspace = true }
actix-session = { workspace = true }
actix-telepathy = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }
derive_more = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
onceuponai-actors= { path = "../onceuponai-actors" }
onceuponai-core= { path = "../onceuponai-core" }
openidconnect = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"

[features]
default = []
cuda = ["onceuponai-core/cuda"]

