[package]
name = "onceuponai-app-beta"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
actix = { workspace = true }
actix-rt = { workspace = true }
actix-session = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
log = { workspace = true }
onceuponai-abstractions= { path = "../../onceuponai-abstractions" }
onceuponai-actors= { path = "../../onceuponai-actors" }
onceuponai-core= { path = "../../onceuponai-core" }
openidconnect = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tauri-plugin-http = "2.0.0-beta.12"
tauri-plugin-process = "2.0.0-beta.8"







