[package]
name = "onceuponai"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
actix = { workspace = true }
actix-rt = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
onceuponai-abstractions= { path = "../../onceuponai-abstractions" }
onceuponai-actors= { path = "../../onceuponai-actors" }
onceuponai-core= { path = "../../onceuponai-core" }
onceuponai-server= { path = "../../onceuponai-server" }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tauri-plugin-http = "2.0.0-beta.12"
tauri-plugin-process = "2.0.0-beta.8"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"








